<resources>
    <string name="app_name">LeTran_CE03</string>
    <string name="btn_Add">ADD</string>
    <string name="btn_View">VIEW</string>
    <string name="txt_Average">Average word length:</string>
    <string name="txt_Median">Median word length:</string>
    <string name="average">0</string>
    <string name="median">0</string>
    <string name="feedback_empty">Type in something!</string>
    <string name="feedback_allwhitespace">You cannot add only white space!</string>
    <string name="feedback_alreadyexist">You already added this string</string>
    <string name="feedback_success">Word added!</string>
    <string name="alert_title">Selected string:</string>
    <string name="alert_pos_btn">Cancel</string>
    <string name="alert_nev_btn">Remove</string>
    <string name="hint">Enter a string</string>
</resources>
